--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,11 @@
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~6.0",
+        "botman/botman": "~2.0",
+        "botman/tinker": "~1.0",
+        "botman/driver-web": "~1.0",
+        "botman/studio-addons": "~1.0"
     },
     "autoload": {
         "classmap": [
